--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,13 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
+
+// Colors.
+
+// Font.
+
+// Width & height.
+$header-height: 200px;
+$header-logo-height: 50px;
+
+$launch-guide-item-img-height: 30px;
