add aside component (#24)

--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -16,3 +16,8 @@
     // height: $launch-guide-item-img-height;
     height: 30px;
 }
+
+html, body{
+    //may cause troubless
+    height: 100%;
+}
