--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "variables";
+@import "buttons";
 @import "common";
+@import "aside";
