Add Invitation page + fix Aside component (#32)
* added aside

* Added invitation page 

conflict trash ANNIGILATED!

Invitation page created

* changed color order

* invitation`s head updated for responsiveness

* develop-team-5 updated (#3)

* minor changes

* Update main.scss

* Update launch-guide.html

* .gitignore fixed

* conflict trash ANNIGILATED!

* Invitation page created

* INCREDIBLE POWER OF GITIGNORE IS NEAR

* Delete dist directory

--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -1,3 +1,7 @@
+html, body{
+    height: 100%;
+}
+//doublecheck, may cause troubles ^
 .page-header {
     background-image: url(/src/img/header-bg.png);
     height: $header-height;
