--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,43 +1,33 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
-
 // Colors.
+$dark: #1F2426;
+$gray-800: #333A3D;
+$white: #fff;
+$yellow: #FCD214;
 $theme-colors: (
-    "primary":    $yellow,
-    "secondary":  $secondary,
-    "success":    $success,
-    "info":       $info,
-    "warning":    $warning,
-    "danger":     $danger,
-    "light":      $light,
-    "dark":       $dark
-);
-
-$dark:     #1f2426;
-$gray-800: #333a3d;
-$white:    #fff;
-$yellow:  #ffc107;
-
-
+    "primary": $yellow,
+    "secondary": $secondary,
+    "success": $success,
+    "info": $info,
+    "warning": $warning,
+    "danger": $danger,
+    "light": $light,
+    "dark": $dark,
+    );
 // Font.
 $btn-font-weight-lg: 800;
 $btn-font-weight-link: 500;
-
 // Width & height.
 $header-height: 200px;
-$header-logo-height: 50px;
-
-$launch-guide-item-img-height: 30px;
-
+$header-logo-height: 60px;
+$launch-guide-items-width: 720px;
+$launch-guide-item-img-height: 350px;
 $aside-width: 250px;
-
-
 $btn-padding-y-lg: 14px;
-
 $btn-font-size-lg: 18px;
 $link-decoration: unset;
-
 // Buttons.
 $btn-link-hover-color: $white;
 $btn-link-color: $white;
