--- a/src/components/aside.html
+++ b/src/components/aside.html
@@ -1,49 +1,53 @@
-<!-- WIP - need to fix links-->
-
-<aside class="aside h-100">
-    <div class=" h-100">
-        <div class="text-center">
-            <img src="/src/img/logo.png" alt="sdasd" class="my-4">
-        </div>
-        <div>
-            <ul class="list-unstyled mx-3">
-                <li>
-                    <a href="#" class="btn my-3 btn-dark d-block btn-lg">Launch Guide</a>
-                </li>
-                <li>
-                    <a href="#" class="btn-link btn my-3 d-block btn-lg">Invite Your Team</a>
-                </li>
-                <li>
-                    <a href="#" class="btn my-3 btn-link d-block btn-lg">Team Reports</a>
-                </li>
-                <li>
-                    <a href="#" class="btn my-3 btn-link d-block btn-lg">My Reports</a>
-                </li>
-                <li>
-                    <a href="#" class="btn my-3 item-yellow btn-link d-block btn-lg">Fill out a Report</a>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <div class="py-2">
-                <ul class="list-unstyled mx-3">
-                    <li>
-                        <a href="#" class="btn btn-link my-3 d-block btn-lg">Back to Elite</a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn btn-link my-3 d-block btn-lg">My Company</a>
-                    </li>
-            </div>
-            <div class="py-1 h-100">
-                <ul class="list-unstyled mx-3 align-bottom h-100">
-                    <li>
-                        <a href="#" class="btn my-3 btn-link d-block btn-lg align-bottom"><i class="bi bi-gear-fill"></i>&nbsp;My Profile</a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn my-3 btn-link d-block btn-lg align-bottom"><i class="bi bi-box-arrow-left"></i>&nbsp;Sign Out</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<!-- Side nav for md+ -->
+<aside class="aside d-none d-md-flex flex-column justify-content-between  min-vh-100">
+  <!-- Main options (top) -->
+  <div>
+    <div class="text-center">
+      <img src="/src/img/logo.png" alt="sdasd" class="my-4">
     </div>
+    <div>
+      <ul class="list-unstyled mx-3">
+        <li>
+          <a href="#" class="btn my-3 btn-dark d-block btn-lg">Launch Guide</a>
+        </li>
+        <li>
+          <a href="#" class="btn-link btn my-3 d-block btn-lg">Invite Your Team</a>
+        </li>
+        <li>
+          <a href="#" class="btn my-3 btn-link d-block btn-lg">Team Reports</a>
+        </li>
+        <li>
+          <a href="#" class="btn my-3 btn-link d-block btn-lg">My Reports</a>
+        </li>
+        <li>
+          <a href="#" class="btn my-3 item-yellow btn-link d-block btn-lg">Fill out a Report</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Additional options (bottom) -->
+  <div>
+    <div class="py-2">
+      <ul class="list-unstyled mx-3">
+        <li>
+          <a href="#" class="btn btn-link my-3 d-block btn-lg">Back to Elite</a>
+        </li>
+        <li>
+          <a href="#" class="btn btn-link my-3 d-block btn-lg">My Company</a>
+        </li>
+    </div>
+    <div class="py-1 h-100">
+      <ul class="list-unstyled mx-3 align-bottom h-100">
+        <li>
+          <a href="#" class="btn my-3 btn-link d-block btn-lg align-bottom"><i class="bi bi-gear-fill"></i>&nbsp;My
+            Profile</a>
+        </li>
+        <li>
+          <a href="#" class="btn my-3 btn-link d-block btn-lg align-bottom"><i
+              class="bi bi-box-arrow-left"></i>&nbsp;Sign Out</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </aside>
