Add fill-a-report page (#46)
Invitation page: grave accent ` replaced by apostrophe '.

--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -21,3 +21,9 @@
     right: -2rem;
     background-color: $blue-feedback;
 }
+
+.btn-primary:disabled {
+    box-shadow: unset !important;
+    color: $gray-disabled;
+    background-color: $gray-disabled-bg;
+}
