Add team reports - immediate team (#49)
* added aside

* Added invitation page 

conflict trash ANNIGILATED!

Invitation page created

* changed color order

* invitation`s head updated for responsiveness

* develop-team-5 updated (#3)

* minor changes

* Update main.scss

* Update launch-guide.html

* .gitignore fixed

* conflict trash ANNIGILATED!

* Invitation page created

* INCREDIBLE POWER OF GITIGNORE IS NEAR

* Delete dist directory

* Reports page (#4)

* add reports-page

Co-authored-by: Arseny Ivasyuk <poiasd3241@gmail.com>

* pulled data (#6)

pulled from main
Co-authored-by: Arseny Ivasyuk <poiasd3241@gmail.com>
Co-authored-by: Arseny Ivasyuk <76008141+poiasd3241@users.noreply.github.com>

* delete thrash

Co-authored-by: Arseny Ivasyuk <poiasd3241@gmail.com>

--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -8,6 +8,16 @@
     border: 1px $btn-link-border-color solid;
 }
 
+.btn-dark-active{
+    font-weight: $btn-font-weight-head-tr;
+    border: 2px $btn-dark-active-border-color solid;
+}
+
+.btn-dark-passive{
+    font-weight: $btn-font-weight-head-tr;
+    color: $gray-500;
+}
+
 .item-yellow {
     color: $btn-link-addit-color;
 }
