Add edit member info page (#51)
+ Fix some buttons

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -27,6 +27,7 @@ $background: #f5f7f8;
 $dark: #1f2426;
 $gray-800: #333a3d;
 $gray-secondary: #a1a8ac;
+$gray-circle-intials: #d5d9db;
 $gray-disabled: #8e999e;
 $gray-disabled-bg: #e8eced;
 $white: #fff;
@@ -58,6 +59,8 @@ $btn-font-weight-lg: 800;
 $btn-font-weight-link: 500;
 
 $btn-font-weight-head-tr: 500;
+$initials-font-size-big: 2rem;
+$initials-font-size-small: 1.3rem;
 
 // Width & height.
 $header-height: 200px;
