--- a/src/components/btn-overlay-help-feedback.html
+++ b/src/components/btn-overlay-help-feedback.html
@@ -1,6 +1,6 @@
 <!-- Help button -->
 <a href="#"
-  class="btn-primary fw-bold text-dark w-auto mb-3 me-3 px-3 py-2  rounded-pill position-fixed bottom-0 end-0">
+  class="btn btn-primary fw-bold text-dark w-auto mb-3 me-3 px-3 py-2  rounded-pill position-fixed bottom-0 end-0">
   <i class="bi bi-question-circle"></i> Help
 </a>
 
