--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -71,14 +71,63 @@ html {
     max-width: $grade-range-submit-max-width;
 }
 
-.text-input-long{
+.text-input-long {
     max-width: $text-input-long-max-width;
 }
 
-.text-input-medium{
+.text-input-medium {
     max-width: $text-input-medium-max-width;
 }
 
-.text-input-short{
+.text-input-short {
     max-width: $text-input-short-max-width;
+}
+
+.circle-with-text {
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    text-align: center;
+    display: flex;
+}
+
+.bg-gray-circle-initials {
+    background-color: $gray-circle-intials;
+}
+
+.initials-circle-base {
+    border-radius: 50%;
+    background-color: $gray-circle-intials;
+    border: solid 2px $white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.initials-circle-big {
+    @extend .initials-circle-base;
+    width: 95px;
+    height: 95px;
+}
+
+.initials-circle-small {
+    @extend .initials-circle-base;
+    width: 55px;
+    height: 55px;
+}
+
+.initials-text-base {
+    color: $dark;
+    font-weight: bold;
+    margin: 0;
+}
+
+.initials-text-big {
+    @extend .initials-text-base;
+    font-size: $initials-font-size-big;
+}
+
+.initials-text-small {
+    @extend .initials-text-base;
+    font-size: $initials-font-size-small;
 }
