--- a/src/components/aside.html
+++ b/src/components/aside.html
@@ -3,7 +3,7 @@
   <!-- Main options (top) -->
   <div>
     <div class="text-center">
-      <img src="./img/logo.png" alt="sdasd" class="my-4">
+      <img src="../img/logo.png" alt="sdasd" class="my-4">
     </div>
     <div>
       <ul class="list-unstyled mx-3">
